ch3prac/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\PROGRA~1\Java\JDK17~1.0_6\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac
-d
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java
<---- end of javadoc command ---->
Loading source file \\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java...
Constructing Javadoc information...
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java:43: error: constructor Door(String) is already defined in class Door
    public Door(String Closed)
           ^
Standard Doclet version 1.7.0_60
Building tree for all the packages and classes...
Generating \\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\doc\Door.html...
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java:26: warning - @pre is an unknown tag.
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java:26: warning - @post is an unknown tag.
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java:26: warning - Tag @return cannot be used in constructor documentation.  It can only be used in the following types of documentation: method.
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java:26: warning - @param argument "y" is not a parameter name.
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java:86: warning - @pre is an unknown tag.
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java:86: warning - @post is an unknown tag.
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java:86: warning - @param argument "y" is not a parameter name.
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java:69: warning - @pre is an unknown tag.
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java:69: warning - @post is an unknown tag.
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java:69: warning - @param argument "y" is not a parameter name.
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java:102: warning - @pre is an unknown tag.
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java:102: warning - @post is an unknown tag.
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java:102: warning - @param argument "y" is not a parameter name.
\\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\Door.java:102: warning - @return tag cannot be used in method with void return type.
Generating \\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\doc\package-frame.html...
Generating \\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\doc\package-summary.html...
Generating \\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating \\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\doc\allclasses-frame.html...
Generating \\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\doc\allclasses-noframe.html...
Generating \\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\doc\index.html...
Generating \\NNHSSRV2.hs.sd203.org\WETroy$\github\unit2Classes\ch3prac\doc\stylesheet.css...
15 warnings
